# dev

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .rat-apache  .rat-excludes  CONTRIBUTING.md  MANIFEST.in  NOTICE.txt  README.md  go.mod  pyproject.toml
.github/workflows/: dev.yaml  dev_issues.yaml  docker-build.yaml  release.yaml  test.yaml  test_local.yaml  update_workflow.yaml  validate.yaml
adbc_drivers_dev/: .env  changelog.py  compose.yaml  copyright.py  generate.py  make.py  make_config.py  package.py  release.py  title_check.py  validation.py  workflow.py
adbc_drivers_dev/compose/manylinux/: Dockerfile  install_go.sh  only-export-adbc.ld
adbc_drivers_dev/compose/manylinux-cpp/: Dockerfile  only-export-adbc.ld
adbc_drivers_dev/compose/manylinux-rust/: Dockerfile  install_libclang.sh  install_rust.sh
adbc_drivers_dev/rat/: __init__.py  __main__.py  cli.py
adbc_drivers_dev/templates/: dev.yaml  dev_daily.yaml  dev_issues.yaml  dev_pr.yaml  go_test_pr.yaml  golangci.toml  pixi.toml  test.yaml
adbc_drivers_dev/templates/validation/: README.md  conftest.py  driver-template.md  driver.py  driver_test_uri.py  generate_documentation.py  pytest.ini  test_file.py
docs/checklist/: go.md
schema/: README.md  generate-schema.json
tests/: test_detect_version.py  test_make.py  test_package.py  test_workflow.py
