# Copyright (c) 2025 ADBC Drivers Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "adbc-drivers-dev"
version = "0.1"

dependencies = [
  "doit",
  "jinja2",
  "packaging",
  "platformdirs",
  "pydantic>=2.0",
  "pygit2",
  "requests",
  "ruamel.yaml>=0.18.11,<0.19",
  "tomlkit >=0.13.2,<0.14",
]

[project.scripts]
pre-commit-copyright = "adbc_drivers_dev.copyright:main"
pre-commit-rat = "adbc_drivers_dev.rat:main"
adbc-gen-package = "adbc_drivers_dev.package:main"
adbc-gen-workflow = "adbc_drivers_dev.workflow:main"
adbc-make = "adbc_drivers_dev.make:main"
adbc-release = "adbc_drivers_dev.release:main"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["adbc_drivers_dev", "adbc_drivers_dev.rat"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
adbc-drivers-dev = { path = ".", editable = true }

[tool.pixi.environments]
test = ["test"]

[tool.pixi.tasks]

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.test.tasks]
test = "pytest -vs"
